tuning of n-gram size

--- a/notebooks/1.0-ta-markov-model-building.ipynb
+++ b/notebooks/1.0-ta-markov-model-building.ipynb
@@ -67,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Full run\n"
+    "# Full run & Tuning of n-gram Size\n"
    ]
   },
   {
@@ -91,38 +91,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conan_mm = MarkovModel()\n",
+    "mm = MarkovModel()\n",
     "\n",
-    "conan_mm.fit_corpus(model_name, corp.raw_text, n=8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(conan_mm.generate_tweet(160))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "conan_mm.save_model_weights()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_mm = MarkovModel()\n",
+    "results = {}\n",
     "\n",
-    "new_mm.load_model_weights(model_name, n= 8)"
+    "for n in range(9,10):\n",
+    "    print(f\"N = {n}\")\n",
+    "    mm.fit_corpus(model_name, corp.raw_text, n=n, corpus_type=\"book\")\n",
+    "    # mm.save_model_weights()\n",
+    "\n",
+    "    results[n] = []\n",
+    "\n",
+    "    # generate samples\n",
+    "    for x in range(5):\n",
+    "\n",
+    "        results[n].append(mm.generate_tweet(200))"
    ]
   },
   {
@@ -131,15 +114,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_mm.generate_tweet(200).strip().capitalize()"
+    "for n in results.keys():\n",
+    "    print(f\"N = {n}\")\n",
+    "    for sample in results[n]:\n",
+    "        print(f\"Arthur Conan Doyle:\\n{sample}\\n\")\n",
+    "    print(\"\\n\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
